--- a/boost/try_it/index.html
+++ b/boost/try_it/index.html
@@ -33,9 +33,9 @@
 
 
 <div class="section">
-<pre><code class="cpp">#include &lt;cassert&gt;
+<pre><code class="cpp">#include &lt;boost/di.hpp&gt;
+#include &lt;cassert&gt;
 #include &lt;iostream&gt;
-#include &lt;boost/di.hpp&gt;
 
 namespace di = boost::di;
 
