--- a/boost/examples/index.html
+++ b/boost/examples/index.html
@@ -137,9 +137,9 @@
 </ul>
 <hr />
 <h3 id="hello-world">Hello World</h3>
-<pre><code class="cpp">#include &lt;cassert&gt;
+<pre><code class="cpp">#include &lt;boost/di.hpp&gt;
+#include &lt;cassert&gt;
 #include &lt;iostream&gt;
-#include &lt;boost/di.hpp&gt;
 
 namespace di = boost::di;
 
