--- a/extensions/index.html
+++ b/extensions/index.html
@@ -247,6 +247,7 @@
 <li><a href="#assisted-injection">Assisted Injection</a></li>
 <li><a href="#concepts">Concepts</a></li>
 <li><a href="#factory">Factory</a></li>
+<li><a href="#generics-typed-erasure-interfaces">Generics / Typed Erasure Interfaces</a></li>
 <li><a href="#lazy">Lazy</a></li>
 <li><a href="#named-parameters">Named Parameters</a></li>
 <li><a href="#xml-injection">XML Injection</a></li>
