--- a/boost/try_it/index.html
+++ b/boost/try_it/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
 
-<meta name="author" content="Krzysztof Jusiak">
+<meta name="author" content="Kris Jusiak">
 <link rel="canonical" href="http://boost-experimental.github.io/di/try_it/index.html">
 <title>Try It! - Boost.DI</title>
 
