--- a/boost/tutorial/index.html
+++ b/boost/tutorial/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
 
-<meta name="author" content="Krzysztof Jusiak">
+<meta name="author" content="Kris Jusiak">
 <link rel="canonical" href="http://boost-experimental.github.io/di/tutorial/index.html">
 <title>Tutorial - Boost.DI</title>
 
