--- a/boost/index.html
+++ b/boost/index.html
@@ -281,8 +281,8 @@ but also can help you with...</p>
 </ul>
 <blockquote></blockquote>
 <ul>
-<li><a href="http://boost-experimental.github.io/msm-lite/">Experimental Boost.MSM-lite</a><ul>
-<li>C++14 header only eUML-like Meta State Machine library with no dependencies</li>
+<li><a href="http://boost-experimental.github.io/sml">Experimental Boost.SML</a><ul>
+<li>C++14 header only Meta State Machine library with no dependencies</li>
 </ul>
 </li>
 </ul>
