--- a/boost/materials/index.html
+++ b/boost/materials/index.html
@@ -36,28 +36,28 @@
 <ul>
 <li><strong>Dependency Injection</strong></li>
 </ul>
-<p><img alt="YOUTUBE" src="https://www.youtube.com/embed/IKD2-MAkXyQ" /></p>
+<p><a href="https://www.youtube.com/embed/IKD2-MAkXyQ">https://www.youtube.com/embed/IKD2-MAkXyQ</a></p>
 <hr />
 <ul>
 <li><strong>The Clean Code Talks - Don't Look For Things!</strong></li>
 </ul>
-<p><img alt="YOUTUBE" src="https://www.youtube.com/embed/RlfLCWKxHJ0" /></p>
+<p><a href="https://www.youtube.com/embed/RlfLCWKxHJ0">https://www.youtube.com/embed/RlfLCWKxHJ0</a></p>
 <hr />
 <ul>
 <li>C++Now 2016: <strong>C++14 Dependency Injection Library (Boost.DI)</strong></li>
 </ul>
-<p><img alt="YOUTUBE" src="https://www.youtube.com/embed/comZthFv3PM" /></p>
+<p><a href="https://www.youtube.com/embed/comZthFv3PM">https://www.youtube.com/embed/comZthFv3PM</a></p>
 <p><a href="http://boost-experimental.github.io/di/cppnow-2016">Slides</a></p>
 <hr />
 <ul>
 <li><strong>A New Type of dependency injection</strong></li>
 </ul>
-<p><img alt="YOUTUBE" src="http://www.youtube.com/embed/oK_XtfXPkqw" /></p>
+<p><a href="http://www.youtube.com/embed/oK_XtfXPkqw">http://www.youtube.com/embed/oK_XtfXPkqw</a></p>
 <hr />
 <ul>
 <li><strong>The Future of Dependency Injection with Dagger 2</strong></li>
 </ul>
-<p><img alt="YOUTUBE" src="https://www.youtube.com/embed/plK0zyRLIP8" /></p>
+<p><a href="https://www.youtube.com/embed/plK0zyRLIP8">https://www.youtube.com/embed/plK0zyRLIP8</a></p>
 <hr />
 </div>
 
