--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@ but also can help you with...</p>
 </ul>
 <blockquote></blockquote>
 <ul>
-<li><a href="http://boost-experimental.github.io/msm-lite/">Experimental Boost.MSM-lite</a><ul>
-<li>C++14 header only eUML-like Meta State Machine library with no dependencies</li>
+<li><a href="http://boost-experimental.github.io/sml">Experimental Boost.SML</a><ul>
+<li>C++14 header only Meta State Machine library with no dependencies</li>
 </ul>
 </li>
 </ul>
@@ -578,5 +578,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-10-23 16:54:56.355262
+Build Date UTC : 2016-10-23 17:09:44.528659
 -->
